--- a/_posts/2017-08-14-So-Hot.md
+++ b/_posts/2017-08-14-So-Hot.md
@@ -8,5 +8,5 @@ tags:
 - Nate
 ---
 
-Me: "Ezra, is your pizza cool enough now?"</br>
+Me: "Ezra, is your pizza cool enough now?"<br/>
 Ezra: "It's so hot, when I touched it my finger boiled."
