--- a/_posts/2021-04-25-Thor.md
+++ b/_posts/2021-04-25-Thor.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Thor
-date: 2021-04-251 15:34:00 -0400
-categories:
+date: "2021-04-251 15:34:00 -0400"
+categories: ~
 tags:
 - Phineas
 ---
